# SPLAss3

./: .gitignore  BGRSclient
Client/: CMakeLists.txt  makefile
Client/include/: BGRSclient.h  Message.h  MessageEncoderDecoder.h  MessageProtocol.h  ServerCom.h  Task.h  UserListener.h  connectionHandler.h
Client/src/: BGRSclient.cpp  Message.cpp  MessageEncoderDecoder.cpp  MessageProtocol.cpp  ServerCom.cpp  Task.cpp  UserListener.cpp  connectionHandler.cpp  echoClient.cpp
Server/: BGRSclient  Courses.txt
Server/spl-net/: Courses.txt  pom.xml
Server/spl-net/src/main/java/bgu/spl/net/: Courses.txt  Database.java  Main.java
Server/spl-net/src/main/java/bgu/spl/net/api/: MessagingProtocol.java  MsgEncDec.java
Server/spl-net/src/main/java/bgu/spl/net/impl/BGRSServer/: BGRSServerProtocol.java  MsgEncDec.java  ReactorMain.java  TPCMain.java
Server/spl-net/src/main/java/bgu/spl/net/srv/: BlockingConnectionHandler.java  Course.java  CourseComparator.java  NonBlockingConnectionHandler.java  Type.java  User.java
Server/spl-net/src/main/java/bgu/spl/net/srv/Messages/: Ack.java  AdminRegister.java  CourseReg.java  CourseStat.java  Err.java  Error.java  IsRegistered.java  KdamCheck.java  Login.java  Logout.java  Message.java  MyCourse.java  (+5 more)
Server/src/main/java/bgu/spl/net/: Database.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/: ReactorMain.java
Server/src/main/java/bgu/spl/net/srv/: User.java
Server/src/main/java/bgu/spl/net/srv/Messages/: Ack.java  AdminRegister.java  CourseReg.java  Err.java  KdamCheck.java  Logout.java  StudentStat.java
(+1 files in other folders)
